@@ -1,5 +1,10 @@
 2008-02-09  Sven Herzberg  <sven@imendio.com>
 
+	* src/net/message-handler.c: (network_message_handler_init): use
+	G_DEFINE_TYPE
+
+2008-02-09  Sven Herzberg  <sven@imendio.com>
+
 	* src/ui/game-2-player-manager.c: (game_2_player_manager_init): use
 	G_DEFINE_TYPE_WITH_CODE
 
